# clicker

./: README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/src/: .env  confige_reader.py  main.py
backend/src/bot/: __init__.py  handlers.py
backend/src/db/models/: __init__.py  user.py
clicker/: package-lock.json  package.json
clicker/src/: app.css  app.tsx  index.css
