[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["DimaSculp <dimakuhtey1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
aiogram = "^3.8.0"
tortoise = "^0.1.1"
pydantic-settings = "^2.3.3"
tortoise-orm = "^0.21.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
